# devflowfix-new

./: .dockerignore  .env.example  .gitignore  0_test-failure.txt  APIS.md  DEVFLOWFIX_SOLUTION.md  Makefile  README.md  REDIS_CLOUD_SETUP.md  REDIS_IMPLEMENTATION_SUMMARY.md  SLACK_TESTING_GUIDE.md  alembic.ini  compose.yml  pyproject.toml  quick_test_slack.py  railway.yaml  requirements.txt  test_pr_simple.py  test_redis.py  test_remediator_service_simple.py  test_slack_integration_manual.py  test_solution_generation.py
.github/workflows/: devflowfix-auto-fix-v2.yml
app/: __init__.py  dependencies.py  exceptions.py  gunicorn_conf.py  main.py  middleware.py
app/api/: dependencies.py
app/core/: __init__.py  config.py  enums.py
app/services/: analyzer.py  auth.py  decision.py  event_processor.py  github_log_parser.py  github_log_parser_old.py  github_token_manager.py  pr_creator.py  retriever.py  storage.py
app/utils/: circuit_breaker.py  logging.py  retry.py
docs/: WEBHOOK_SECRETS.md
docs/api/: analytics.md  webhook.md
docs/deployment/: WEBHOOK-QUICKSTART.md  (+1 more)
examples/: TESTING_GITHUB_WEBHOOK.md  pr_management_setup.py  rules_usage.py  test-devflowfix-webhook.yml  validator_usage.py
scripts/: add_github_webhook_secret_column.sql  generate_webhook_secret.py  send_test_webhook.py  setup_vector_db.sh  setup_webhook_secrets.py  test_github_webhook.py  verify_webhook_setup.py
test-failure/: 1_Set up job.txt  2_Checkout code.txt  3_Simulate test failure.txt  8_Post Checkout code.txt  9_Complete job.txt  system.txt
tests/: test_safety_guardrails.py
(+104 files in other folders)
