[project]
name = "devflowfix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.1",
    "aws-embedded-metrics>=3.3.0",
    "aws-xray-sdk>=2.15.0",
    "boto3>=1.40.67",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "kubernetes>=34.1.0",
    "mangum>=0.19.0",
    "openai>=2.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pybreaker>=1.4.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pygithub>=2.8.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.0.1",
    "slack-sdk>=3.37.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.38.0",
]
